--- a/app/src/main/res/layout/activity_admin_update_driver.xml
+++ b/app/src/main/res/layout/activity_admin_update_driver.xml
@@ -4,61 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminMainActivity">
+    tools:context=".AdminUpdateDriver">
 
-    <Button
-        android:id="@+id/new_notification"
+    <EditText
+        android:id="@+id/driver_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="38dp"
-        android:text="New notification" />
+        android:layout_marginTop="69dp"
+        android:hint="Driver Id" />
 
-
-    <Button
-        android:id="@+id/home_page"
+    <EditText
+        android:id="@+id/driver_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="106dp"
-        android:text="Home Page" />
+        android:layout_marginTop="188dp"
+        android:hint="Driver Number" />
 
+    <EditText
+        android:id="@+id/bus_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="211dp"
+        android:hint="Bus number" />
 
-    <Button
-        android:id="@+id/new_poll"
+    <EditText
+        android:id="@+id/driver_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="172dp"
-        android:text="Create new poll" />
+        android:layout_marginTop="124dp"
+        android:hint="Driver Name" />
 
     <Button
-        android:id="@+id/old_poll"
+        android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="140dp"
-        android:text="Last poll results" />
-
-    <Button
-        android:id="@+id/update_driver"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="213dp"
-        android:text="Update Driver" />
-
-    <Button
-        android:id="@+id/adminLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp"
-        android:text="Logout" />
+        android:layout_marginBottom="86dp"
+        android:text="Submit" />
 </RelativeLayout>
